<resources>
    <string name="app_name">Vorpal Gamepad</string>
    <string name="off_button">O</string>
    <string name="on_button">I</string>
    <string name="first_column">1</string>
    <string name="second_column">2</string>
    <string name="third_column">3</string>
    <string name="fourth_column">4</string>
    <string name="walk_row">W</string>
    <string name="dance_row">D</string>
    <string name="fight_row">F</string>
    <string name="record_row">R</string>
    <string name="record_icon">Record</string>
    <string name="play_icon">Play</string>
    <string name="rewind_icon">Rewind</string>
    <string name="erase_icon">Erase</string>
    <string name="stop_icon">Stop</string>
    <string name="pause_icon">Pause</string>
    <string name="help_button">Help</string>
    <string name="settings_button">Help</string>
    <string name="bluetooth_button">Bluetooth</string>
    <string name="state_icon">State</string>
    <string name="logo">Vorpal</string>
    <string name="action_settings">Settings</string>
    <string name="bluetooth_disconnect">Disconnect</string>
    <string name="dpad_button_w">Special</string>
    <string name="dpad_button_f">Forward</string>
    <string name="dpad_button_l">Left</string>
    <string name="dpad_button_r">Right</string>
    <string name="dpad_button_b">Backward</string>
    <string name="no_ip">No IP Address found</string>
    <string name="help_label">Help</string>
    <string name="preferences_label">Preferences</string>

    <string name="message_wait">Please wait</string>
    <string name="message_off">Off</string>
    <string name="message_no_paired_device">No Paired Device</string>
    <string name="message_no_connection">No Connection</string>
    <string name="message_no_bluetooth">Bluetooth Not Available - app stopped</string>
    <string name="message_connecting">Connecting ...</string>
    <string name="message_connection_failed">Connection Failed</string>
    <string name="message_communication_error">Communication error</string>
    <string name="message_scratchx_control">ScratchX control</string>

    <string name="message_action_W1s">Walk Low step</string>
    <string name="message_action_W1w">Walk Low step - stomp/honk</string>
    <string name="message_action_W1f">Walk Low step forward</string>
    <string name="message_action_W1l">Walk Low step left</string>
    <string name="message_action_W1r">Walk Low step right</string>
    <string name="message_action_W1b">Walk Low step backward</string>
    <string name="message_action_W2s">Walk High step</string>
    <string name="message_action_W2w">Walk High step - stomp/honk</string>
    <string name="message_action_W2f">Walk High step forward</string>
    <string name="message_action_W2l">Walk High step left</string>
    <string name="message_action_W2r">Walk High step right</string>
    <string name="message_action_W2b">Walk High step backward</string>
    <string name="message_action_W3s">Walk Small step</string>
    <string name="message_action_W3w">Walk Small step - stomp/honk</string>
    <string name="message_action_W3f">Walk Small step forward</string>
    <string name="message_action_W3l">Walk Small step left</string>
    <string name="message_action_W3r">Walk Small step right</string>
    <string name="message_action_W3b">Walk Small step backward</string>
    <string name="message_action_W4s">Walk Scamper</string>
    <string name="message_action_W4w">Walk Scamper - stomp/honk</string>
    <string name="message_action_W4f">Walk Scamper forward</string>
    <string name="message_action_W4l">Walk Scamper left</string>
    <string name="message_action_W4r">Walk Scamper right</string>
    <string name="message_action_W4b">Walk Scamper backward</string>
    <string name="message_action_D1s">Dance Freestyle</string>
    <string name="message_action_D1w">Dance Freestyle - dab</string>
    <string name="message_action_D1f">Dance Freestyle - twist standing</string>
    <string name="message_action_D1l">Dance Freestyle - twist tri2 legs up</string>
    <string name="message_action_D1r">Dance Freestyle - twist tri1 legs up</string>
    <string name="message_action_D1b">Dance Freestyle - twist on ground</string>
    <string name="message_action_D2s">Dance Ballet</string>
    <string name="message_action_D2w">Dance Ballet - flutter on pointe</string>
    <string name="message_action_D2f">Dance Ballet - forward on pointe</string>
    <string name="message_action_D2l">Dance Ballet - turn left on pointe</string>
    <string name="message_action_D2r">Dance Ballet - turn right on pointe</string>
    <string name="message_action_D2b">Dance Ballet - backward on pointe</string>
    <string name="message_action_D3s">Dance Waves</string>
    <string name="message_action_D3w">Dance Waves - leg ripple</string>
    <string name="message_action_D3f">Dance Waves - clockwise wave</string>
    <string name="message_action_D3l">Dance Waves - teeter</string>
    <string name="message_action_D3r">Dance Waves - totter</string>
    <string name="message_action_D3b">Dance Waves - ccw wave</string>
    <string name="message_action_D4s">Dance Hands</string>
    <string name="message_action_D4w">Dance Hands - auto arms</string>
    <string name="message_action_D4f">Dance Hands - arms forward</string>
    <string name="message_action_D4l">Dance Hands - arms left</string>
    <string name="message_action_D4r">Dance Hands - arms right</string>
    <string name="message_action_D4b">Dance Hands - arms backward</string>
    <string name="message_action_F1s">Fight Front Legs</string>
    <string name="message_action_F1w">Fight Front Legs - auto ninja</string>
    <string name="message_action_F1f">Fight Front Legs - up</string>
    <string name="message_action_F1l">Fight Front Legs - left sweep</string>
    <string name="message_action_F1r">Fight Front Legs - right sweep</string>
    <string name="message_action_F1b">Fight Front Legs - down</string>
    <string name="message_action_F2s">Fight Front Legs, unison</string>
    <string name="message_action_F2w">Fight Front Legs, unison - auto ninja</string>
    <string name="message_action_F2f">Fight Front Legs, unison - both up</string>
    <string name="message_action_F2l">Fight Front Legs, unison - both left</string>
    <string name="message_action_F2r">Fight Front Legs, unison - both right</string>
    <string name="message_action_F2b">Fight Front Legs, unison - both down</string>
    <string name="message_action_F3s">Fight Swivel</string>
    <string name="message_action_F3w">Fight Swivel - reset to stand</string>
    <string name="message_action_F3f">Fight Swivel - hips thrust forward</string>
    <string name="message_action_F3l">Fight Swivel - hips twist left</string>
    <string name="message_action_F3r">Fight Swivel - hips twist right</string>
    <string name="message_action_F3b">Fight Swivel - hips thrust backward</string>
    <string name="message_action_F4s">Fight Lean</string>
    <string name="message_action_F4w">Fight Lean - reset to stand</string>
    <string name="message_action_F4f">Fight Lean - lean forward</string>
    <string name="message_action_F4l">Fight Lean - lean left</string>
    <string name="message_action_F4r">Fight Lean - lean right</string>
    <string name="message_action_F4b">Fight Lean - lean backward</string>
    <string name="message_action_R1">Record/Stop</string>
    <string name="message_action_R2">Play/Pause</string>
    <string name="message_action_R3">Rewind</string>
    <string name="message_action_R4">Erase</string>

    <string name="help_main">This is an app to replace the Vorpal Hexapod gamepad.\nThe gamepad usage guide is at:\n</string>
    <string name="help_main_2">http://vorpalrobotics.com/wiki/index.php/Vorpal_The_Hexapod_Gamepad_User_Guide.\n</string>
    <string name="help_main_3">To use the app, turn the robot on, go to the settings page and connect to the Bluetooth for your robot. Then return to the main page, and turn \"power on\".\n</string>
    <string name="help_main_4">For the full help page, go to:\n</string>
    <string name="help_main_5">https://github.com/sentamugo7/Vorpal_Gamepad/blob/master/README.md\n</string>
    <string name="help_main_view">Main View</string>
    <string name="help_buttons">Buttons:</string>
    <string name="help_power_button">The Power button works like the gamepad power switch.\n</string>
    <string name="help_settings_button">The Settings button will show the user settings/preferences.\n</string>
    <string name="help_help_button">The Help button displays this page.\n</string>
    <string name="help_bluetooth">The Bluetooth button will be black when there is no connection, blue when connected, red if there was a communications error. If you do not connect automatically, You can press the Bluetooth button to connect/disconnect the Robot.\n</string>
    <string name="help_indicators">Indicators:</string>
    <string name="help_state">The State icon will show the state: Trim, Recording, etc.\n</string>
    <string name="help_status">Status:</string>
    <string name="help_status_line">The Status line displays the current status of the application, errors are red, green is scratchX, regular is black.\n</string>
    <string name="help_done">Done</string>
    <string name="help_preferences_view">Preferences View</string>
    <string name="help_bluetooth_device_summary">Select the Bluetooth Device for the Vorpal robot</string>

    <string name="preferences_use_SDcard">use SD card</string>
    <string name="preferences_use_SDcard_summary">simulate an SD card in the Gamepad for storage</string>
    <string name="preferences_sound">Sound</string>
    <string name="preferences_sound_summary">Click noise for key press</string>
    <string name="preferences_connect_bluetooth_automatically">Connect Automatically</string>
    <string name="preferences_connect_bluetooth_automatically_summary">Connect to Bluetooth automatically</string>
    <string name="preferences_bluetooth_speed">Bluetooth Speed</string>
    <string name="preferences_bluetooth_speed_summary">Speed of the Bluetooth connection (set in HC-05)</string>
    <string name="preferences_bluetooth_device">Bluetooth Devices</string>
    <string name="preferences_bluetooth_device_summary">Select the Bluetooth Device for the Vorpal robot (click here to display list of devices)</string>
    <string name="preferences_bluetooth_paired_devices_help">note - The Bluetooth Device must be paired with this Android device, see:</string>
    <string name="preferences_bluetooth_paired_devices_URL">https://support.google.com/android/answer/9075925?hl=en</string>
    <string name="preferences_connect_to_scratchx">ScratchX</string>
    <string name="preferences_connect_to_scratchx_summary">Connect to ScratchX over wifi</string>
    <string name="preferences_done">Done</string>
</resources>
