<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorHelpBackground"
    >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="6dip"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/help_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorHelpText"
            android:text="@string/app_name"
            style="@android:style/TextAppearance.Large"
            />
        <TextView
            android:id="@+id/help_version"
            android:layout_below="@id/help_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorHelpText"
            android:gravity="center"
            />
        <ImageView
            android:id="@+id/help_logo"
            android:layout_below="@id/help_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/vtrans"
            android:padding="6dip"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center"
            />
        <View
            android:id="@+id/help_main_separator"
            android:layout_below="@id/help_logo"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#000000"
            />
        <TextView
            android:id="@+id/help_main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/help_main_separator"
            android:textColor="@color/colorHelpText"
            android:text="@string/help_main"
            />
        <TextView
            android:id="@+id/help_main_2_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/help_main_text"
            android:textColor="@color/colorHelpText"
            android:text="@string/help_main_2"
            />
        <TextView
            android:id="@+id/help_main_3_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/help_main_2_text"
            android:textColor="@color/colorHelpText"
            android:text="@string/help_main_3"
            />
        <TextView
            android:id="@+id/help_main_4_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/help_main_3_text"
            android:textColor="@color/colorHelpText"
            android:text="@string/help_main_4"
            />
        <TextView
            android:id="@+id/help_main_5_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/help_main_4_text"
            android:textColor="@color/colorHelpText"
            android:text="@string/help_main_5"
            />

        <TextView
            android:id="@+id/help_main_view"
            android:layout_below="@id/help_main_5_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorHelpText"
            android:text="@string/help_main_view"
            />
        <TextView
            android:id="@+id/help_buttons"
            android:layout_below="@id/help_main_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorHelpText"
            android:text="@string/help_buttons"
            />
        <LinearLayout
            android:id="@+id/help_power_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/help_buttons"
            >
            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="1"
                android:rowCount="2"
                android:gravity="center_vertical"
                android:background="@drawable/power_button_border"
                >
                <Button
                    android:layout_height="@dimen/power_button_size"
                    android:layout_width="@dimen/power_button_size"
                    android:background="@color/colorPowerButton"
                    android:textColor="@color/colorPowerButtonText"
                    android:text="@string/on_button"
                    />
                <Button
                    android:layout_height="@dimen/power_button_size"
                    android:layout_width="@dimen/power_button_size"
                    android:background="@color/colorPowerButtonPressed"
                    android:textColor="@color/colorPowerButtonText"
                    android:text="@string/off_button"
                    />
            </GridLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorHelpText"
                android:padding="5dp"
                android:text="@string/help_power_button"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/help_power_button_crlf"
            android:layout_below="@id/help_power_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorHelpText"
            android:text="\n"
            />
        <LinearLayout
            android:id="@+id/help_help_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/help_power_button_crlf"
            >
            <ImageView
                android:layout_height="@dimen/icon_size"
                android:layout_width="@dimen/icon_size"
                android:layout_gravity="end"
                app:srcCompat="@drawable/help_icon"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorHelpText"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/help_help_button"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/help_settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/help_help_button"
            >
            <ImageView
                app:srcCompat="@drawable/settings_icon"
                android:layout_height="@dimen/icon_size"
                android:layout_width="@dimen/icon_size"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorHelpText"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/help_settings_button"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/help_bluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/help_settings_button"
            >
            <ImageView
                android:id="@+id/button_id_bluetooth"
                android:layout_height="@dimen/icon_size"
                android:layout_width="@dimen/icon_size"
                app:srcCompat="@drawable/bluetooth_button_connected"
                android:layout_gravity="end"
                android:contentDescription="@string/bluetooth_button"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorHelpText"
                android:padding="5dp"
                android:text="@string/help_bluetooth"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/help_indicators"
            android:layout_below="@id/help_bluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorHelpText"
            android:text="@string/help_indicators"
            />
        <LinearLayout
            android:id="@+id/help_recording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/help_indicators"
            >
            <ImageView
                android:id="@+id/image_id_recording"
                android:layout_height="@dimen/icon_size"
                android:layout_width="@dimen/icon_size"
                app:srcCompat="@drawable/gamepad_recording_state"
                android:layout_gravity="end"
                android:contentDescription="@string/help_state"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorHelpText"
                android:padding="5dp"
                android:text="@string/help_state"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/help_status"
            android:layout_below="@id/help_recording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorHelpText"
            android:text="@string/help_status"
            />
        <TextView
            android:id="@+id/help_status_line"
            android:layout_below="@id/help_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorHelpText"
            android:text="@string/help_status_line"
            />
        <TextView
            android:id="@+id/help_preferences_view"
            android:layout_below="@id/help_status_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorHelpText"
            android:text="@string/help_preferences_view"
            />
        <TextView
            android:id="@+id/help_preferences_card_capacity"
            android:layout_below="@id/help_preferences_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorHelpText"
            android:text="@string/preferences_use_SDcard"
            />
        <TextView
            android:id="@+id/help_preferences_card_capacity_detail"
            android:layout_below="@id/help_preferences_card_capacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorHelpText"
            android:text="@string/preferences_use_SDcard_summary"
            />
        <TextView
            android:id="@+id/help_preferences_card_capacity_detail_crlf"
            android:layout_below="@id/help_preferences_card_capacity_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorHelpText"
            android:text="\n"
            />
        <TextView
            android:id="@+id/help_preferences_sound"
            android:layout_below="@id/help_preferences_card_capacity_detail_crlf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorHelpText"
            android:text="@string/preferences_sound"
            />
        <TextView
            android:id="@+id/help_preferences_sound_detail"
            android:layout_below="@id/help_preferences_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorHelpText"
            android:text="@string/preferences_sound_summary"
            />
        <TextView
            android:id="@+id/help_preferences_sound_detail_crlf"
            android:layout_below="@id/help_preferences_sound_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorHelpText"
            android:text="\n"
            />
        <TextView
            android:id="@+id/help_preferences_vorpal_version"
            android:layout_below="@id/help_preferences_sound_detail_crlf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorHelpText"
            android:text="@string/preferences_vorpal_version"
            />
        <TextView
            android:id="@+id/help_preferences_vorpal_version_detail"
            android:layout_below="@id/help_preferences_vorpal_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorHelpText"
            android:text="@string/preferences_vorpal_version_summary"
            />
        <TextView
            android:id="@+id/help_preferences_vorpal_version_detail_crlf"
            android:layout_below="@id/help_preferences_vorpal_version_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorHelpText"
            android:text="\n"
            />
        <TextView
            android:id="@+id/help_preferences_connect_bluetooth_on_startup"
            android:layout_below="@id/help_preferences_vorpal_version_detail_crlf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorHelpText"
            android:text="@string/preferences_connect_bluetooth_automatically"
            />
        <TextView
            android:id="@+id/help_preferences_connect_bluetooth_on_startup_detail"
            android:layout_below="@id/help_preferences_connect_bluetooth_on_startup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorHelpText"
            android:text="@string/preferences_connect_bluetooth_automatically_summary"
            />
        <TextView
            android:id="@+id/help_preferences_connect_bluetooth_on_startup_detail_crlf"
            android:layout_below="@id/help_preferences_connect_bluetooth_on_startup_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorHelpText"
            android:text="\n"
            />
        <TextView
            android:id="@+id/help_preferences_bluetooth"
            android:layout_below="@id/help_preferences_connect_bluetooth_on_startup_detail_crlf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorHelpText"
            android:text="@string/preferences_bluetooth_device"
            />
        <TextView
            android:id="@+id/help_preferences_bluetooth_detail"
            android:layout_below="@id/help_preferences_bluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorHelpText"
            android:text="@string/help_bluetooth_device_summary"
            />
        <TextView
            android:id="@+id/help_preferences_bluetooth_paired_devices_help"
            android:layout_below="@id/help_preferences_bluetooth_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorHelpText"
            android:text="@string/preferences_bluetooth_paired_devices_help"
            />
        <TextView
            android:id="@+id/help_preferences_bluetooth_paired_devices_URL"
            android:layout_below="@id/help_preferences_bluetooth_paired_devices_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorHelpText"
            android:text="@string/preferences_bluetooth_paired_devices_URL"
            />
        <TextView
            android:id="@+id/help_preferences_bluetooth_paired_devices_URL_crlf"
            android:layout_below="@id/help_preferences_bluetooth_paired_devices_URL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorHelpText"
            android:text="\n"
            />
    </RelativeLayout>
</ScrollView>